[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/MS Gothic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://main_menu/SaveSelect.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[node name="SaveSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.333333, 0.45098, 0.541176, 1 )

[node name="MenuVBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -100.0
margin_right = 121.0
margin_bottom = 100.0

[node name="Save1" type="Button" parent="MenuVBox"]
margin_right = 242.0
margin_bottom = 52.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "NEW SAVE 1"
flat = true

[node name="Label2" type="Label" parent="MenuVBox"]
margin_top = 56.0
margin_right = 242.0
margin_bottom = 70.0

[node name="Save2" type="Button" parent="MenuVBox"]
margin_top = 74.0
margin_right = 242.0
margin_bottom = 126.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "NEW SAVE 2"
flat = true

[node name="Label" type="Label" parent="MenuVBox"]
margin_top = 130.0
margin_right = 242.0
margin_bottom = 144.0

[node name="Save3" type="Button" parent="MenuVBox"]
margin_top = 148.0
margin_right = 242.0
margin_bottom = 200.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "NEW SAVE 3"
flat = true

[node name="Back" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -242.0
margin_top = -90.0
margin_bottom = -38.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.54902, 0.54902, 0.54902, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "BACK"
flat = true

[connection signal="pressed" from="MenuVBox/Save1" to="." method="_on_Save1_pressed"]
[connection signal="pressed" from="MenuVBox/Save2" to="." method="_on_Save2_pressed"]
[connection signal="pressed" from="MenuVBox/Save3" to="." method="_on_Save3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
